# PLUTO

./: .dockerignore  .gitignore  DEVELOPMENT.md  Dockerfile  LICENSE  PointRanges.txt  README.md  biome.json  docker-compose.dev.yml  docker-compose.yml  migrations.json  nx.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: analytics-docker-build.yml  build.yml  cms-docker-build.yml  streamlit_sync.yaml  web-docker-build.yml
Questionnaire/: Prototypes.key
Questionnaire/questionnaire/: README.md
apps/cms/: .dockerignore  .env.example  .env.gpg  .env.production.gpg  .gitignore  Dockerfile  ecosystem.config.js  export.tar.gz.gpg  healthcheck.js  package-lock.json  package.json  pnpm-lock.yaml  project.json
apps/survey-admin/: .env.development  .env.local.docker.gpg  .env.local.example  .env.local.gpg  .env.production  .eslintrc.json  .gitignore  Dockerfile  ecosystem.config.js  healthcheck.js  jest.config.ts  next.config.js  next.config.mjs  package.json  project.json  (+1 more)
apps/survey-admin-e2e/: project.json
apps/survey-analysis/: .dockerignore  Dockerfile  Makefile  README.md  package.json  project.json  pyproject.toml
apps/survey-analysis/.streamlit/: config.toml  secrets.toml.example  secrets.toml.gpg
apps/survey-analysis/assets/: questionnaire.json
apps/survey-analysis/nb/: Prototype.ipynb  Statistics.ipynb
apps/survey-analysis/survey_analysis/: __init__.py  response_gen.py  utils.py
apps/survey-analysis/survey_analysis/app/: export_options.py  general_settings.py  histo_heatmap.py  histo_heatmap_raw.py  home.py  question_weights_toolbar.py  question_weigths.py  questionnaire.py  utils.py
apps/survey-analysis/survey_analysis/charts/: __init__.py  histo_heatmap.py
apps/survey-analysis/survey_analysis/stats/: frequencies.py  possibilities.py  ranges.py  utils.py
assets/: questionnaire.json
modules/survey_tools/: .gitignore  Makefile  README.md  pyproject.toml
modules/survey_tools/nb/: Prototype.ipynb  Statistics.ipynb  UserDesigns.ipynb
modules/survey_tools/pluto_survey_tools/: __init__.py  model.py  response_gen.py  stats.py  utils.py
modules/survey_tools/pluto_survey_tools/app/: export_options.py  general_settings.py  histo_heatmap.py  histo_heatmap_raw.py  home.py  how_to_use.py  question_weights_toolbar.py  question_weigths.py  questionnaire.py  state.py
modules/survey_tools/pluto_survey_tools/app/auth/: __init__.py
modules/survey_tools/pluto_survey_tools/charts/: __init__.py  histo_heatmap.py  utils.py
modules/survey_tools/pluto_survey_tools/stats/: __init__.py  frequencies.py  possibilities.py  ranges.py  utils.py
scripts/: build-and-start.sh  secrets.sh
(+197 files in other folders)
