[tool.poetry]
name = "survey-tools"
version = "0.1.0"
description = ""
authors = ["Péter Ferenc Gyarmati <dev.petergy@gmail.com>"]
readme = "README.md"
packages = [{include = "pluto_survey_tools"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
numpy = "^1.24.1"
jupyter = "^1.0.0"
notebook = "^6.5.2"
altair = "^4.2.0"
vl-convert-python = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
